--- a/src/styles.css
+++ b/src/styles.css
@@ -17,18 +17,20 @@ header {
 
 .container {
   margin: 120px auto;
-  /*background-color: #eafffd;*/
   display: block;
   max-width: 600px;
 }
 
-form {
-  padding: 30px;
+.form-container {
+  padding: 30px 30px 10px 30px;
   background: #f6f0f0;
   border-radius: 10px;
-  display: flex;
   box-shadow: 0px 20px 60px rgba(65, 50, 100, 0.09);
-  margin-bottom: 30px;
+  margin-bottom: 15px;
+}
+
+form {
+  display: flex;
 }
 
 .instructions {
@@ -56,7 +58,7 @@ form {
 .poem {
   font-size: 16px;
   background: #f6f0f0;
-  padding: 20px;
+  padding: 20px 30px;
   line-height: 2;
   font-weight: 400px;
   border-left: 3px solid #c599b6;
@@ -64,8 +66,34 @@ form {
   border-radius: 10px;
 }
 
+.hidden {
+}
+
+.hint {
+  line-height: 1.5;
+  margin-left: 10px;
+  margin-top: 5px;
+  font-size: 12px;
+  opacity: 0.6;
+}
+
 footer {
   text-align: center;
   font-size: 13px;
   margin-top: 30px;
+}
+
+.generating {
+  animation: blink-animation 1s steps(5, start) infinite;
+}
+
+@keyframes blink-animation {
+  to {
+    visibility: hidden;
+  }
+}
+@-webkit-keyframes blink-animation {
+  to {
+    visibility: hidden;
+  }
 }
